Input element: Fix the dirty value flag after type change.

When the input type was changed from type=hidden, of which value-mode is
"default", to type=text, of which value-mode is "value", we incorrectly set
dirty value flag to true.

This CL fixes it.

Specification:
https://html.spec.whatwg.org/multipage/forms.html#input-type-change

BUG=655412

Review-Url: https://codereview.chromium.org/2417753003
Cr-Commit-Position: refs/heads/master@{#424936}

Former-commit-id: 2cabef4e7d4a0b298a114add1298920cc0cfb321